--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,38 @@ body {
     font-style: italic;
 }
 
+.details-content {
+    height: 100%;
+    backdrop-filter: brightness(50%);
+}
+
+
+@media (min-width: 992px) {
+    .details {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        margin-top: -200%;
+        transition: 0.2s;
+    }
+    
+    .img-filter:hover .details {
+        margin-top: 0;
+    }
+    
+    .details-content {
+        height: 100%;
+        backdrop-filter: brightness(50%);
+        display: block;
+    }
+}
+
+
+
+
+
+
+
+
+
+
